# nexus-openclaw

./: .gitignore  AGENTS.md  CLAUDE.md  Nexus.pen  README.md  TDD_IMPLEMENTATION_SUMMARY.md  TDD_SUCCESS_SUMMARY.md  nexus  package-lock.json  package.json  playwright.config.ts  start.sh  test_cli.py
client/: README.md  package-lock.json  package.json  vite.config.ts
dev-docs/: 00-technical-spec.md  CHANGELOG.md
docs/: API.md  SCHEDULED_TASKS_API.md  SCHEDULED_TASKS_FEATURE_SUMMARY.md  TROUBLESHOOTING.md
logs/: session_20260310_010512_865090.jsonl  session_20260310_013537_932628.jsonl  session_20260310_014341_233277.jsonl  session_20260310_083427_445561.jsonl  session_20260310_083953_016392.jsonl  session_20260310_084655_433711.jsonl  session_20260310_085033_052813.jsonl  session_20260310_085219_403385.jsonl  session_20260310_090145_217826.jsonl  session_20260310_090441_729527.jsonl  session_20260310_090612_842726.jsonl  session_20260310_092406_239021.jsonl  session_20260310_092957_396920.jsonl  session_20260310_101032_954058.jsonl  session_20260310_132541_461420.jsonl  session_20260310_133404_165660.jsonl  session_20260310_160042_912951.jsonl
oa-project/: config.yaml
openclaw-proxy/: README.md  __init__.py  cli.py  logger.py  proxy.py  pyproject.toml  test_integration.py  utils.py
playwright-report/: index.html
scripts/: com.nexus.launch.plist  dev-backend.js  ensure-dev-ports.js  install-launchagent.sh  nexus-stack.sh  nexusctl.sh  test-sessions-ux.sh
server/: index.js  index.js.bak-20260309-141846  scheduled-tasks.js  session-manager.js
(+59 files in other folders)
