[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-proxy"
version = "1.0.0"
description = "WebSocket logging proxy for OpenClaw sessions"
authors = [
    {name = "Nexus Project", email = "info@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "websockets>=11.0",
    "aiofiles>=23.0",
    "click>=8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20"
]

[project.scripts]
openclaw-proxy = "openclaw_proxy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["openclaw_proxy*"]
